--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/Favicon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta property="og:image" content="%PUBLIC_URL%/Share.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -20,7 +20,7 @@
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/Favicon.png" or "Favicon.png", "%PUBLIC_URL%/Favicon.png" will
+      Unlike "/favicon.png" or "favicon.png", "%PUBLIC_URL%/favicon.png" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
